# xray

./: README.KR.md  README.ko.md  README.md  README_CN.md  README_JA.md  package-lock.json  package.json
docs/02-design/features/: image-save.design.md
docs/archive/2026-02/: _INDEX.md
docs/archive/2026-02/image-save/: image-save.analysis.md  image-save.design.md  image-save.plan.md  image-save.report.md
src/: App.css  App.tsx
src-tauri/: Cargo.toml  Info.plist  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/src/: accessibility.rs  capture.rs  constants.rs  lib.rs  main.rs  polling.rs
