[package]
name = "xray"
version = "0.1.0"
description = "A Tauri App"
authors = ["you"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
# The `_lib` suffix may seem redundant but it is necessary
# to make the lib name unique and wouldn't conflict with the bin name.
# This seems to be only an issue on Windows, see https://github.com/rust-lang/cargo/issues/8519
name = "xray_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = ["macos-private-api", "tray-icon"] }
tauri-plugin-opener = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
core-graphics = "0.25.0"
core-foundation = "0.10.1"
accessibility-sys = "0.2.0"
arboard = "3.6.1"
foreign-types = "0.5.0"
tauri-plugin-global-shortcut = "2.3.1"
tauri-plugin-shell = "2.3.4"
tauri-plugin-dialog = "2.5.0"
base64 = "0.22.1"
image = "0.25.9"
log = "0.4.29"
tauri-plugin-log = "2.8.0"

